--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,3 +1,40 @@
 $font-family-base:  'Inter', sans-serif;
 $font-family-sans-serif: 'Inter', sans-serif;
 $font-family-serif: 'Inter', sans-serif;
+$headings-font-weight: 300;
+$btn-font-weight: 300;
+
+
+$sidebarWidth: 210px;
+
+$primary: rgb(0, 0, 0);
+$red: #C94E3E;
+$green: #7AC167;
+
+$theme-colors: (
+  "primary": $primary,
+);
+
+$container-max-widths: (
+  sm: 540px,
+  md: 720px,
+  lg: 960px,
+  xl: 1200px
+);
+$grid-gutter-width: 20px;
+
+
+$font-weight-base: 300;
+$headings-font-weight: 800;
+
+
+// $input-btn-padding-y:         .375rem !default;
+// $input-btn-padding-x:         .75rem !default;
+
+$btn-padding-y: 0.6rem;
+$btn-padding-x: 1.3rem;
+$input-padding-y: 0.6rem;
+$input-padding-x: 1.3rem;
+
+$input-focus-border-color: #999;
+$input-focus-box-shadow: 0;
