--- a/src/components/ColorCard.scss
+++ b/src/components/ColorCard.scss
@@ -5,23 +5,47 @@
   box-sizing: border-box;
   border-radius: 6px;
   margin-bottom: 20px;
+
+  animation-name: flip;
+  animation-duration: 0.4s;
+  animation-fill-mode:backwards;
+
+  @keyframes flip {
+    0% {
+      opacity: 0;
+      transform: translateY(25px);
+    }
+  }
+
   .palette {
-    display: flex;
-    flex-direction: column;
     border-radius: 6px;
-    height: 250px;
+    height: 300px;
+    display: grid;
+    grid-template-rows: 40% 25% 21% 14%;
+    grid-template-columns: 100%;
 
     .color-bar {
-      display: flex;
-      flex-direction: row;
-      justify-content: left;
+      display: inline-grid;
       align-items: center;
-      padding: 20px;
+      grid-template-columns: min-content;
+
+      padding-left: 10px;
+
+      animation-name: place;
+
+      @keyframes place {
+        0% {
+          transform: scaleY(1.2);
+          filter: brightness(300%);
+          filter: hue-rotate(10deg);
+        }
+      }
 
       span.color-label {
-        flex-basis: auto;
         font-size: 14px;
         margin: 0;
+        // color: #fff;
+        // background: rgba(0,0,0,0.2);
         color: transparent;
         background: transparent;
         padding: 4px;
@@ -32,24 +56,38 @@
         span.color-label {
           transition: color 300ms, background 300ms;
           color: #fff;
-          background: rgba(0,0,0,0.2)
+          background: rgba(0,0,0,0.2);
         }
       }
 
-      &.primary { height: 40%; border-radius: 4px 4px 0 0}
-      &.secondary { height: 25%; }
-      &.third { height: 21%; }
-      &.fourth { height: 14%; border-radius: 0 0 4px 4px }
+
+      &.primary {
+        border-radius: 4px 4px 0 0;
+        animation-duration: 1s;
+      }
+      &.secondary {
+        animation-duration: 0.6s;
+      }
+      &.third {
+        animation-duration: 0.2s;
+      }
+      &.fourth {
+        border-radius: 0 0 4px 4px;
+        animation-duration: 0.1s;
+      }
     }
   }
   .meta {
-    padding-top: 15px;
+    margin-top: 15px;
+    display: grid;
+    grid-template-columns: 50% 50%;
     .date {
-      text-align: right;
+      text-align: right
     }
     .like-btn {
-      border: 1px solid #e1e1e1;
-      color: #000
+      // border: 1px solid #e1e1e1;
+      color: #000;
+      text-decoration: none;
     }
   }
 }
