--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -1,6 +1,20 @@
-.brand {
+nav.header {
   h1 {
     font-weight: 900;
     font-size: 18px;
+    display: inline-block;
+    a {
+      color: #000;
+    }
+  }
+
+  ul.header-nav-links {
+    margin: 0;
+    padding: 0;
+    float: right;
+    list-style: none;
+    li {
+      
+    }
   }
 }
